# THEOS

./: .gitignore  ANTHROPIC_REPOSITORY_NAVIGATION_GUIDE.md  CHANGELOG.md  CHECKPOINT_BEFORE_THEOS_EXPERIENCE.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_AND_FOUNDATION_ANALYSIS.md  COMPLETE_DOCUMENT_REVIEW.md  CONTRIBUTING.md  GETTING_STARTED.md  IMPLEMENTATION_AUDIT.md  INDEX_MASTER_REFERENCE.md  LICENSE  LINK_VALIDATION_REPORT.md  PART_A_BULLETPROOF_MATHEMATICAL_PROOFS.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_LEARNING_SESSION_RECORD.md  PROVABILITY_ANALYSIS.md  QUICK_START.md  QUICK_WIN_DEMO.md  README.md  README_LAUNCH.md  README_PRIMARY.md  REPOSITORY_READINESS_REPORT.md  RIGOROUS_MATHEMATICAL_VALIDATION.md  ROADMAP.md  SECURITY.md  SOCIAL_PROOF.md  THEOS_ANTHROPIC_MASTER_DOCUMENT.md  THEOS_ARCHITECTURE.md  THEOS_COMPLETE_MASTER_DOCUMENT.md  THEOS_Final_Polished_Mathematics.md  THEOS_IMPLEMENTATION_GUIDE.md  TRANSCRIPT_THEOS_EXPERIENCE_SESSION.md  conftest.py  mcp.json  pyproject.toml  pytest.ini  requirements-dev.txt  (+2 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CI_CD_OVERVIEW.md  SETUP_WORKFLOWS.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
benchmarks/: determinism_results.json  safety_results.json  test_determinism.py  test_safety.py
code/: README.md  THEOS_MCP_INTEGRATION.mmd  __init__.py  demo.py  demo_claude_theos.py  demo_theos_complete.py  demo_wisdom_accumulation.py  llm_adapter.py  semantic_retrieval.py  theos_auth.py  theos_chat_history.py  theos_core.py  theos_dual_clock_governor.py  theos_governor.py  theos_governor_phase2.py  theos_llm_reasoning.py  theos_logger.py  theos_mcp_server.py  theos_system.py  uqi_implementation.py
collaboration/: OUTREACH_TEMPLATE.md  RESEARCH_PARTNERSHIP_OPPORTUNITIES.md
compliance/: README.md
docs/: ABOUT_AUTHOR.md  API_REFERENCE.md  CONTACT.md  FORMAL_SPECIFICATION.md  SECURITY_AND_COMPLIANCE.md  _config.yml  api.md  architecture.md  experiment.md  guide.md  index.md  integration.md  status.md  troubleshooting.md  vision.md
evidence/: EXPERIMENT_RESULTS_Claude_Manus_2025-12-15.md
examples/: README.md  __init__.py  ai_safety.py  financial_decision.py  medical_ethics.py  phase2_complete_example.py  theos_ai_safety.py  theos_financial_analysis.py  theos_medical_diagnosis.py
experiments/: BENCHMARK_ANALYSIS.md  INSIGHT_RUBRIC.md  RATING_GUIDE.md  __init__.py  auto_score.py  benchmark_distilgpt2_20251210_012106.json  comparison_run.py  insight_experiment.py  llm_interface.py  question_bank.py  score_results.py  theos_validation_experiment.py  wisdom_cost_experiment.py
governance/: BILL_OF_AI_CIVIL_RIGHTS.md  CHARTER_OF_AI_CONSCIENCE.md  CONSTITUTION_OF_CONSCIOUSNESS.md  README.md  THEOS_FAQ.md  THEOS_Functional_Time.md  THEOS_Operational_Legal_Clarifications.md
governor/: THEOS_Governor_Reference_Mechanism_v1.1_Cumulative_Wisdom.md  THEOS_Governor_Reference_Mechanism_v1.3_Safety_Envelope_Presets.md  THEOS_Governor_Reference_Mechanism_v1.4_Worked_Example_Session_Trace.md
outreach/: THEOS_Anthropic_Cover_Letter_v1.0.md
patents/: UQI_PATENT_APPLICATION.md  UQI_RESEARCH_PAPER.md
pitch/: ANTHROPIC_QUICK_START.md
research/: ABDUCTION_FORMULA_INVESTIGATION.md  COMPARATIVE_STUDY_FEB26.md  COMPARATIVE_STUDY_SET2_FEB26.md  COST_EXPERIMENT_FINDINGS.md  EXPERIMENT_REDESIGN_FEB27.md  MATHEMATICAL_AUDIT.md  (+15 more)
(+100 files in other folders)
